<?xml version="1.0"?>
<package format="2">
  <name>hesai_lidar</name>
  <version>0.0.0</version>
  <description>
    The hesai_lidar package includes the driver for the Heisai Pandar64 LiDAR sensor.
  </description>
  <maintainer email="wuxiaozhou@hesaitech.com">hesaiwuxiaozhou</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>yaml-cpp</depend>
  <depend>libpcl-all-dev</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
</package>
